# malloc_tracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
gdb_plugin/: gdb_malloc_tracer
lib/: CMakeLists.txt  main.cpp
